Adding left side sticky menu bar.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html lang="en">
     <head>
         <title>AnomalousEm</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1> Hello, World! </h1>
-        <p>I'm hosted with GitHub Pages.</p>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="https://www.credly.com/users/emily-shader">Credly</a></li>
+            <li><a href="https://www.linkedin.com/in/emily-shader-bb1b40113/">LinkedIn</a></li>
+            <li><a href="https://x.com/AnomalousEm">X</a></li>
+        </ul>
+        <h1> Hi, I'm Emily! </h1>
+        <p>This is my website.</p>
     </body>
 </html>
