--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
             <li><a href="https://www.linkedin.com/in/emily-shader-bb1b40113/">LinkedIn</a></li>
             <li><a href="https://x.com/AnomalousEm">X</a></li>
         </ul>
-        <h1> Hi, I'm Emily! </h1>
-        <p>This is my website.</p>
+        <div>
+            <h1> Hi, I'm Emily! </h1>
+            <p>This is my website.</p>
+        </div>
     </body>
 </html>
