Menu bar and home page work.

--- a/index.html
+++ b/index.html
@@ -5,15 +5,23 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div class="menuDiv">
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="https://www.credly.com/users/emily-shader">Credly</a></li>
-            <li><a href="https://www.linkedin.com/in/emily-shader-bb1b40113/">LinkedIn</a></li>
-            <li><a href="https://x.com/AnomalousEm">X</a></li>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="">EXPERIENCE</a></li>
+            <li><a href="">SKILLS</a></li>
+            <li><a href="">CERTIFICATIONS</a></li>
+            <li><a href="">EDUCATION</a></li>
+            <li><a href="https://www.credly.com/users/emily-shader" target="_blank">CREDLY</a></li>
+            <li><a href="https://www.linkedin.com/in/emily-shader-bb1b40113/" target="_blank">LINKEDIN</a></li>
+            <li><a href="https://x.com/AnomalousEm" target="_blank">X</a></li>
+            <li><a href="https://github.com/AnomalousEm" target="_blank">GITHUB</a></li>
+
         </ul>
-        <div>
+        </div>
+        <div class="homeDiv">
             <h1> Hi, I'm Emily! </h1>
-            <p>This is my website.</p>
+            <p>I'm a cybersecurity professional with over 6 years of experience in security operations. I am currently working at IBM in the threat management space - including SIEM, SOAR, EDR, ASM, and threat intelligence.</p>
         </div>
     </body>
 </html>
