--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
     <head>
         <title>AnomalousEm</title>
         <link rel="stylesheet" href="style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <div class="menuDiv">
+        <h1><center>EMILY SHADER</center></h1>
+        <center><img src="Emily.jpg" alt="Emily Shader" class="Emily"></center>
         <ul>
             <li><a href="index.html">HOME</a></li>
             <li><a href="">EXPERIENCE</a></li>
@@ -16,7 +20,6 @@
             <li><a href="https://www.linkedin.com/in/emily-shader-bb1b40113/" target="_blank">LINKEDIN</a></li>
             <li><a href="https://x.com/AnomalousEm" target="_blank">X</a></li>
             <li><a href="https://github.com/AnomalousEm" target="_blank">GITHUB</a></li>
-
         </ul>
         </div>
         <div class="homeDiv">
