Social media icons

--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
             <li><a href="">CERTIFICATIONS</a></li>
             <li><a href="">EDUCATION</a></li>
             <li><a href="https://www.credly.com/users/emily-shader" target="_blank">CREDLY</a></li>
-            <li><a href="https://www.linkedin.com/in/emily-shader-bb1b40113/" target="_blank">LINKEDIN</a></li>
-            <li><a href="https://x.com/AnomalousEm" target="_blank">X</a></li>
-            <li><a href="https://github.com/AnomalousEm" target="_blank">GITHUB</a></li>
         </ul>
+        <div class = socialIcons>
+            <a href="https://www.linkedin.com/in/emily-shader-bb1b40113/" class="fa fa-linkedin fa-2x" target="_blank"></a>
+            <a href="https://x.com/AnomalousEm" class="fa fa-twitter fa-2x" target="_blank"></a>
+            <a href="https://github.com/AnomalousEm" class="fa fa-github fa-2x" target="_blank"></a>
+        </div>
         </div>
         <div class="homeDiv">
             <h1> Hi, I'm Emily! </h1>
