--- a/education.html
+++ b/education.html
@@ -25,8 +25,7 @@
         </div>
         </div>
         <div class="homeDiv">
-            <h1> Hi, I'm Emily! </h1>
-            <p>I'm a cybersecurity professional with over 6 years of experience in security operations. I am currently working at IBM in the threat management space - including SIEM, SOAR, EDR, ASM, and threat intelligence.</p>
+            <h1> EDUCATION </h1>
         </div>
     </body>
 </html>
