--- a/certifications.html
+++ b/certifications.html
@@ -26,6 +26,15 @@
         </div>
         <div class="homeDiv">
             <h1> CERTIFICATIONS </h1>
+            <h2>Certified Information Systems Secuurity Professional (CISSP)</h2>
+            <br>
+            <h2>GIAC Certified Incident Handler (GCIH)</h2>
+            <br>
+            <h2>GIAC Certified Detection Analyst (GCDA)</h2>
+            <br>
+            <h2>GIAC Security Essentials (GSEC)</h2>
+            <br>
+            <h2>IT Information Library Foundations Certification (ITIL)</h2>
         </div>
     </body>
 </html>
