--- a/education.html
+++ b/education.html
@@ -26,6 +26,10 @@
         </div>
         <div class="homeDiv">
             <h1> EDUCATION </h1>
+            <h2>University of Louisville</h2>
+            <h3>Bachelor of Science Business Administration</h3>
+            May 2014 - May 2019<br>
+            Computer Information Systems - Information Security and Web Development Tracks<br>
         </div>
     </body>
 </html>
