--- a/experience.html
+++ b/experience.html
@@ -26,6 +26,17 @@
         </div>
         <div class="homeDiv">
             <h1> EXPERIENCE </h1>
+            <h2>Security Engineer (Pre-Sales)</h2>
+            <h3>IBM</h3>
+            April 2023 - Present<br>
+            <br>
+            <h2>Security Analyst</h2>
+            <h3>LG&E and KU Energy</h3>
+            May 2019 - April 2023<br>
+            <br>
+            <h2>IT Intern</h2>
+            <h3>LG&E and KU Energy</h3>
+            May 2017 - May 2019<br>
         </div>
     </body>
 </html>
