--- a/certifications.html
+++ b/certifications.html
@@ -19,9 +19,9 @@
             <li><a href="https://www.credly.com/users/emily-shader" target="_blank">CREDLY</a></li>
         </ul>
         <div class = socialIcons>
-            <a href="https://www.linkedin.com/in/emily-shader-bb1b40113/" class="fa fa-linkedin fa-2x" target="_blank"></a>
-            <a href="https://x.com/AnomalousEm" class="fa fa-twitter fa-2x" target="_blank"></a>
-            <a href="https://github.com/AnomalousEm" class="fa fa-github fa-2x" target="_blank"></a>
+            <a href="https://www.linkedin.com/in/emily-shader-bb1b40113/" class="fa fa-linkedin fa-lg" target="_blank"></a>
+            <a href="https://x.com/AnomalousEm" class="fa fa-twitter fa-lg" target="_blank"></a>
+            <a href="https://github.com/AnomalousEm" class="fa fa-github fa-lg" target="_blank"></a>
         </div>
         </div>
         <div class="homeDiv">
