--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <div class="homeDiv">
             <h1> Hi, I'm Emily! </h1>
-            <p>I'm a cybersecurity professional with over 6 years of experience in security operations. I am currently working at IBM in the threat management space - including SIEM, SOAR, EDR, ASM, and threat intelligence.</p>
+            <p>I'm a cybersecurity professional with over 6 years of experience in security operations. I am currently working at Humana as a Threat Detection Engineer.</p>
         </div>
     </body>
 </html>
