Edited about me on home page.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <p>When I’m not working, I stay active in the cybersecurity community. I’m the Director of Communications for ISSA Kentuckiana, where I help organize events, monthly meetings, and opportunities for local professionals to connect and learn. I also manage the organization’s social media platforms, creating content to engage the community and raise awareness about our events and initiatives. On top of that, I enjoy attending conferences, training sessions, and workshops to stay up-to-date on the latest trends in the field.</p>
                 
                 
-            <p>Want to know more? Check out my</p>
+            <p>Want to know more? Check out the rest of my website to see my journey and achievements!</p>
         </div>
     </body>
 </html>
