--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         </div>
         <div class="homeDiv">
-            <h1> Hi, I'm Emily! &#1F44B </h1>
+            <h1> Hi, I'm Emily! &#1F44B; </h1>
 
             <p>I'm a cybersecurity professional who’s passionate about protecting organizations from today’s constantly evolving threats. I’ve been working in security operations for over six years, focusing on areas like security architecture, engineering, and operations. Right now, I’m a Threat Detection Engineer at Humana, where I help keep critical systems and data secure.</p>
                 
