Career updates to education, experience, skills..

--- a/certifications.html
+++ b/certifications.html
@@ -10,7 +10,7 @@
         <div class="menuDiv">
         <h1><center>EMILY SHADER</center></h1>
         <center><img src="Emily.jpg" alt="Emily Shader" class="Emily"></center>
-        <ul>
+        <ul class="menuList">
             <li><a href="index.html">HOME</a></li>
             <li><a href="experience.html">EXPERIENCE</a></li>
             <li><a href="skills.html">SKILLS</a></li>
@@ -26,15 +26,13 @@
         </div>
         <div class="homeDiv">
             <h1> CERTIFICATIONS </h1>
-            <h2>Certified Information Systems Secuurity Professional (CISSP)</h2>
-            <br>
-            <h2>GIAC Certified Incident Handler (GCIH)</h2>
-            <br>
-            <h2>GIAC Certified Detection Analyst (GCDA)</h2>
-            <br>
-            <h2>GIAC Security Essentials (GSEC)</h2>
-            <br>
-            <h2>IT Information Library Foundations Certification (ITIL)</h2>
+            <ul class="certList">
+                <li>Certified Information Systems Security Professional (CISSP)</li>
+                <li>GIAC Certified Incident Handler (GCIH)</li>
+                <li>GIAC Certified Detection Analyst (GCDA)</li>
+                <li>GIAC Security Essentials (GSEC)</li>
+                <li>IT Information Library Foundations Certification (ITIL)</li>
+            </ul>
         </div>
     </body>
 </html>
