--- a/education.html
+++ b/education.html
@@ -10,7 +10,7 @@
         <div class="menuDiv">
         <h1><center>EMILY SHADER</center></h1>
         <center><img src="Emily.jpg" alt="Emily Shader" class="Emily"></center>
-        <ul>
+        <ul class="menuList">
             <li><a href="index.html">HOME</a></li>
             <li><a href="experience.html">EXPERIENCE</a></li>
             <li><a href="skills.html">SKILLS</a></li>
@@ -30,6 +30,10 @@
             <h3>Bachelor of Science Business Administration</h3>
             May 2014 - May 2019<br>
             Computer Information Systems - Information Security and Web Development Tracks<br>
+
+            <h2>Cornell University</h2>
+            <h3>Python Programming Certificate</h3>
+            December 2024 - Present<br>
         </div>
     </body>
 </html>
