--- a/experience.html
+++ b/experience.html
@@ -10,7 +10,7 @@
         <div class="menuDiv">
         <h1><center>EMILY SHADER</center></h1>
         <center><img src="Emily.jpg" alt="Emily Shader" class="Emily"></center>
-        <ul>
+        <ul class="menuList">
             <li><a href="index.html">HOME</a></li>
             <li><a href="experience.html">EXPERIENCE</a></li>
             <li><a href="skills.html">SKILLS</a></li>
@@ -26,17 +26,26 @@
         </div>
         <div class="homeDiv">
             <h1> EXPERIENCE </h1>
+
+            <h2>Senior Detection Engineer</h2>
+            <h3>Humana</h3>
+            September 2024 - Present<br>
+            <br>
+
             <h2>Security Engineer (Pre-Sales)</h2>
             <h3>IBM</h3>
-            April 2023 - Present<br>
+            April 2023 - September 2024<br>
             <br>
+
             <h2>Security Analyst</h2>
             <h3>LG&E and KU Energy</h3>
             May 2019 - April 2023<br>
             <br>
+
             <h2>IT Intern</h2>
             <h3>LG&E and KU Energy</h3>
             May 2017 - May 2019<br>
+
         </div>
     </body>
 </html>
