--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div class="menuDiv">
         <h1><center>EMILY SHADER</center></h1>
         <center><img src="Emily.jpg" alt="Emily Shader" class="Emily"></center>
-        <ul>
+        <ul class="menuList">
             <li><a href="index.html">HOME</a></li>
             <li><a href="experience.html">EXPERIENCE</a></li>
             <li><a href="skills.html">SKILLS</a></li>
