--- a/skills.html
+++ b/skills.html
@@ -10,7 +10,7 @@
         <div class="menuDiv">
         <h1><center>EMILY SHADER</center></h1>
         <center><img src="Emily.jpg" alt="Emily Shader" class="Emily"></center>
-        <ul>
+        <ul class="menuList">
             <li><a href="index.html">HOME</a></li>
             <li><a href="experience.html">EXPERIENCE</a></li>
             <li><a href="skills.html">SKILLS</a></li>
@@ -26,6 +26,27 @@
         </div>
         <div class="homeDiv">
             <h1> SKILLS </h1>
+
+            <h3>Languages</h3>
+            <ul class="skillList">
+                <li>Python</li>
+                <li>Splunk Search Processing Language (SPL)</li>
+                <li>Structured Query Language (SQL)</li>
+                <li>Regular Expressions (RegEx)</li>
+                <li>Ariel Query Language (AQL)</li>
+                <li>C#</li>
+                <li>HTML/CSS</li>
+            </ul>
+            <br>
+            <h3>Tools</h3>
+            <ul class="skillList">
+                <li>Splunk Enterprise Security</li>
+                <li>ELK (Elastic, Logstash, Kibana)</li>
+                <li>IBM QRadar SIEM</li>
+                <li>Randori (Attack Surface Management)</li>
+                <li>IBM QRadar SOAR (formerly Resilient)</li>
+            </ul>
+
         </div>
     </body>
 </html>
