--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <div class="menuDiv">
         <h1><center>EMILY SHADER</center></h1>
-        <center><img src="Emily.jpg" alt="Emily Shader" class="Emily"></center>
+        <center><img src="EmilyShader.jpg" alt="Emily Shader" class="Emily"></center>
         <ul class="menuList">
             <li><a href="index.html">HOME</a></li>
             <li><a href="experience.html">EXPERIENCE</a></li>
