--- a/certifications.html
+++ b/certifications.html
@@ -16,7 +16,6 @@
             <li><a href="skills.html">SKILLS</a></li>
             <li><a href="certifications.html">CERTIFICATIONS</a></li>
             <li><a href="education.html">EDUCATION</a></li>
-            <li><a href="https://www.credly.com/users/emily-shader" target="_blank">CREDLY</a></li>
         </ul>
         <div class = socialIcons>
             <a href="https://www.linkedin.com/in/emily-shader-bb1b40113/" class="fa fa-linkedin fa-lg" target="_blank"></a>
@@ -33,6 +32,11 @@
                 <li>GIAC Security Essentials (GSEC)</li>
                 <li>IT Information Library Foundations Certification (ITIL)</li>
             </ul>
+            <br>
+            <div class="credly">
+                <a href="https://www.credly.com/users/emily-shader" target="_blank">Click here to view my badges on Credly!</a>
+            </div>
         </div>
+
     </body>
 </html>
