--- a/certifications.html
+++ b/certifications.html
@@ -31,6 +31,7 @@
                 <li>GIAC Certified Detection Analyst (GCDA)</li>
                 <li>GIAC Security Essentials (GSEC)</li>
                 <li>IT Information Library Foundations Certification (ITIL)</li>
+                <li>Splunk Core Certified Power User</li>
             </ul>
             <br>
             <div class="credly">
