--- a/skills.html
+++ b/skills.html
@@ -37,13 +37,16 @@
                 <li>HTML/CSS</li>
             </ul>
             <br>
-            <h3>Tools</h3>
+            <h3>Software & Tools</h3>
             <ul class="skillList">
                 <li>Splunk Enterprise Security</li>
                 <li>ELK (Elastic, Logstash, Kibana)</li>
                 <li>IBM QRadar SIEM</li>
                 <li>Randori (Attack Surface Management)</li>
                 <li>IBM QRadar SOAR (formerly Resilient)</li>
+                <li>Windows Event Collection/Forwarding (WEC/WEF)</li>
+                <li>Tanium</li>
+                <li>Linux/UNIX, Windows</li>
             </ul>
 
         </div>
