--- a/communityinvolvement.html
+++ b/communityinvolvement.html
@@ -16,6 +16,7 @@
             <li><a href="skills.html">SKILLS</a></li>
             <li><a href="certifications.html">CERTIFICATIONS</a></li>
             <li><a href="education.html">EDUCATION</a></li>
+            <li><a href="communityinvolvement.html">COMMUNITY INVOLVEMENT</a></li>
         </ul>
         <div class = socialIcons>
             <a href="https://www.linkedin.com/in/emily-shader-bb1b40113/" class="fa fa-linkedin fa-lg" target="_blank"></a>
@@ -24,6 +25,20 @@
         </div>
         </div>
         <div class="homeDiv">
+            <h1>COMMUNITY INVOLVEMENT</h1>
+            <h2>ISSA Kentuckiana</h2>
+            <a href = https://www.issa-kentuckiana.org/ class="commlinks" target="_blank">Website</a>
+            <a href = https://www.members.issa.org/general/custom.asp?page=join-now class="commlinks" target="_blank">Become A Member</a>
+            <a href = https://www.eventbrite.com/o/issa-kentuckiana-17965555697 class="commlinks" target="_blank">Upcoming Events</a><br>
+            <h3>Membership Benefits</h3>
+            <ul>
+                <li>Access to exclusive events (Social Events like Top Golf, Five Iron Golf, Bowling, Happy Hours, and a Nice Holiday Dinner)</li>
+                <li>Free and/or discounted access to chapter hosted events</li>
+                <li>15% Sullivan University Tuition Discount: Applies to members and direct family members!</li>
+                <li>20% off select training from KEP Training</li>
+            </ul>
+            <a href=https://www.keptraining.com/ class="commlinks">keptraining.com</a>
+            <a href=https://www.sullivan.edu/ class="commlinks">sullivan.edu</a>
             
         </div>
     </body>
