--- a/education.html
+++ b/education.html
@@ -16,6 +16,7 @@
             <li><a href="skills.html">SKILLS</a></li>
             <li><a href="certifications.html">CERTIFICATIONS</a></li>
             <li><a href="education.html">EDUCATION</a></li>
+            <li><a href="communityinvolvement.html">COMMUNITY INVOLVEMENT</a></li>
         </ul>
         <div class = socialIcons>
             <a href="https://www.linkedin.com/in/emily-shader-bb1b40113/" class="fa fa-linkedin fa-lg" target="_blank"></a>
