Updated education page for python cert end

--- a/education.html
+++ b/education.html
@@ -33,7 +33,7 @@
 
             <h2>Cornell University</h2>
             <h3>Python Programming Certificate</h3>
-            December 2024 - Present<br>
+            December 2024 - May 2025<br>
         </div>
     </body>
 </html>
