--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     </head>
     <body>
         <div class="menuDiv">
-        <h1><center>EMILY SHADER</center></h1>
-        <center><img src="EmilyShader.jpg" alt="Emily Shader" class="Emily"></center>
+        <h1><center>AnomalousEm</center></h1>
+        
         <ul class="menuList">
             <li><a href="index.html">HOME</a></li>
             <li><a href="experience.html">EXPERIENCE</a></li>
@@ -25,7 +25,9 @@
         </div>
         </div>
         <div class="homeDiv">
-            <h1> Hi, I'm Emily! &#128075; </h1>
+            <h1> Hi, I'm Emily Shader! &#128075; </h1>
+
+            <img src="EmilyShader.jpg" alt="Emily Shader" class="emilyheadshot">
 
             <p>I'm a cybersecurity professional who’s passionate about protecting organizations from today’s constantly evolving threats. I’ve been working in cybersecurity for over six years, focusing on areas like security architecture, engineering, and operations. Right now, I’m a Threat Detection Engineer at Humana, where I help detect threats to critical systems and data.</p>
                 
