--- a/experience.html
+++ b/experience.html
@@ -8,8 +8,8 @@
     </head>
     <body>
         <div class="menuDiv">
-        <h1><center>EMILY SHADER</center></h1>
-        <center><img src="EmilyShader.jpg" alt="Emily Shader" class="Emily"></center>
+        <h1><center>AnomalousEm</center></h1>
+        
         <ul class="menuList">
             <li><a href="index.html">HOME</a></li>
             <li><a href="experience.html">EXPERIENCE</a></li>
