added responsive scaling to h1

--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
         </div>
         </div>
         <div class="homeDiv">
-            <h1> Hi, I'm Emily Shader! &#128075; </h1>
+            <h1>~$ whoami</h1>
 
             <img src="EmilyShader.jpg" alt="Emily Shader" class="emilyheadshot">
+
+            <h2>Hi, I'm Emily Shader! &#128075;</h2>
 
             <p>I'm a cybersecurity professional who’s passionate about protecting organizations from today’s constantly evolving threats. I’ve been working in cybersecurity for over six years, focusing on areas like security architecture, engineering, and operations. Right now, I’m a Threat Detection Engineer at Humana, where I help detect threats to critical systems and data.</p>
                 
