--- a/experience.html
+++ b/experience.html
@@ -25,7 +25,7 @@
         </div>
         </div>
         <div class="homeDiv">
-            <h1> EXPERIENCE </h1>
+            <h1> Experience </h1>
 
             <h2>Senior Detection Engineer</h2>
             <h3>Humana</h3>
