--- a/certifications.html
+++ b/certifications.html
@@ -25,7 +25,7 @@
         </div>
         </div>
         <div class="homeDiv">
-            <h1> CERTIFICATIONS </h1>
+            <h1> Certifications </h1>
             <ul class="certList">
                 <li>Certified Information Systems Security Professional (CISSP)</li>
                 <li>GIAC Certified Incident Handler (GCIH)</li>
