--- a/communityinvolvement.html
+++ b/communityinvolvement.html
@@ -25,7 +25,7 @@
         </div>
         </div>
         <div class="homeDiv">
-            <h1>COMMUNITY INVOLVEMENT</h1>
+            <h1>Community Involvement</h1>
             <h2>ISSA Kentuckiana</h2>
             <a href = https://www.issa-kentuckiana.org/ class="commlinks" target="_blank">Website</a>
             <a href = https://www.members.issa.org/general/custom.asp?page=join-now class="commlinks" target="_blank">Become A Member</a>
