--- a/education.html
+++ b/education.html
@@ -25,7 +25,7 @@
         </div>
         </div>
         <div class="homeDiv">
-            <h1> EDUCATION </h1>
+            <h1> Education </h1>
             <h2>University of Louisville</h2>
             <h3>Bachelor of Science Business Administration</h3>
             May 2014 - May 2019<br>
