--- a/skills.html
+++ b/skills.html
@@ -25,7 +25,7 @@
         </div>
         </div>
         <div class="homeDiv">
-            <h1> SKILLS </h1>
+            <h1> Skills </h1>
 
             <h3>Languages</h3>
             <ul class="skillList">
