comm involvment mods

--- a/communityinvolvement.html
+++ b/communityinvolvement.html
@@ -27,20 +27,25 @@
         </div>
         <div class="homeDiv">
             <h1>Community Involvement</h1>
-            <h2>ISSA Kentuckiana</h2>
-            <a href = https://www.issa-kentuckiana.org/ class="commlinks" target="_blank">Website</a>
-            <a href = https://www.members.issa.org/general/custom.asp?page=join-now class="commlinks" target="_blank">Become A Member</a>
-            <a href = https://www.eventbrite.com/o/issa-kentuckiana-17965555697 class="commlinks" target="_blank">Upcoming Events</a><br>
-            <h3>Membership Benefits</h3>
-            <ul>
-                <li>Access to exclusive events (Social Events like Top Golf, Five Iron Golf, Bowling, Happy Hours, and a Nice Holiday Dinner)</li>
-                <li>Free and/or discounted access to chapter hosted events</li>
-                <li>15% Sullivan University Tuition Discount: Applies to members and direct family members!</li>
-                <li>20% off select training from KEP Training</li>
-            </ul>
-            <a href=https://www.keptraining.com/ class="commlinks">keptraining.com</a>
-            <a href=https://www.sullivan.edu/ class="commlinks">sullivan.edu</a>
-            
+
+            <div class="ci-issa">
+                <center><h2>ISSA Kentuckiana</h2></center>
+                <center><a href = https://www.linkedin.com/company/issa-kentuckiana target="_blank">LinkedIn</a> | <a href = https://discord.gg/5TY46fPj6B target="_blank">Discord</a> | <a href = https://www.issa-kentuckiana.org/ target="_blank">issa-kentuckiana.org</a></center>
+                <center><h3>Membership Benefits</h3></center>
+                <ul>
+                    <li>Access to exclusive events (Social Events like Top Golf, Five Iron Golf, Bowling, Happy Hours, and a Nice Holiday Dinner)</li>
+                    <li>Free and/or discounted access to chapter hosted events</li>
+                    <li>15% Sullivan University Tuition Discount: Applies to members and direct family members!</li>
+                    <li>20% off select training from KEP Training</li>
+                </ul>
+                
+                <center>
+                <a href = https://www.members.issa.org/general/custom.asp?page=join-now class="button" target="_blank">Become A Member</a><br>
+                <a href = https://www.eventbrite.com/o/issa-kentuckiana-17965555697 class="button" target="_blank">Upcoming Events</a><br>
+                <a href=https://www.keptraining.com/ class="button">keptraining.com</a><br>
+                <a href=https://www.sullivan.edu/ class="button">sullivan.edu</a>
+                </center>
+            </div>
         </div>
     </body>
 </html>
