Home page formatting

--- a/communityinvolvement.html
+++ b/communityinvolvement.html
@@ -28,7 +28,7 @@
         <div class="homeDiv">
             <h1>Community Involvement</h1>
 
-            <div class="ci-issa">
+            <div class="pagesection">
                 <center><h2>ISSA Kentuckiana</h2></center>
                 <center><a href = https://www.linkedin.com/company/issa-kentuckiana target="_blank">LinkedIn</a> | <a href = https://discord.gg/5TY46fPj6B target="_blank">Discord</a> | <a href = https://www.issa-kentuckiana.org/ target="_blank">issa-kentuckiana.org</a></center>
                 <center><h3>Membership Benefits</h3></center>
@@ -42,8 +42,6 @@
                 <center>
                 <a href = https://www.members.issa.org/general/custom.asp?page=join-now class="button" target="_blank">Become A Member</a><br>
                 <a href = https://www.eventbrite.com/o/issa-kentuckiana-17965555697 class="button" target="_blank">Upcoming Events</a><br>
-                <a href=https://www.keptraining.com/ class="button">keptraining.com</a><br>
-                <a href=https://www.sullivan.edu/ class="button">sullivan.edu</a>
                 </center>
             </div>
         </div>
