--- a/experience.html
+++ b/experience.html
@@ -28,24 +28,32 @@
         <div class="homeDiv">
             <h1> Experience </h1>
 
-            <h2>Senior Detection Engineer</h2>
-            <h3>Humana</h3>
-            September 2024 - Present<br>
+            <div id="humana" class="pagesection">
+                <h2>Senior Detection Engineer</h2>
+                <h3>Humana</h3>
+                September 2024 - Present<br>
+                <br>
+            </div>
             <br>
-
-            <h2>Security Engineer (Pre-Sales)</h2>
-            <h3>IBM</h3>
-            April 2023 - September 2024<br>
+            <div id="IBM" class="pagesection">
+                <h2>Security Engineer (Pre-Sales)</h2>
+                <h3>IBM</h3>
+                April 2023 - September 2024<br>
+                <br>
+            </div>
             <br>
-
-            <h2>Security Analyst</h2>
-            <h3>LG&E and KU Energy</h3>
-            May 2019 - April 2023<br>
+            <div id="lge" class="pagesection">
+                <h2>Security Analyst</h2>
+                <h3>LG&E and KU Energy</h3>
+                May 2019 - April 2023<br>
+                <br>
+            </div>
             <br>
-
-            <h2>IT Intern</h2>
-            <h3>LG&E and KU Energy</h3>
-            May 2017 - May 2019<br>
+            <div id="lgeintern" class="pagesection">
+                <h2>IT Intern</h2>
+                <h3>LG&E and KU Energy</h3>
+                May 2017 - May 2019<br>
+            </div>
 
         </div>
     </body>
