--- a/skills.html
+++ b/skills.html
@@ -27,7 +27,7 @@
         </div>
         <div class="homeDiv">
             <h1> Skills </h1>
-
+            <div id="languages" class="pagesection">
             <h3>Languages</h3>
             <ul class="skillList">
                 <li>Python</li>
@@ -38,7 +38,9 @@
                 <li>C#</li>
                 <li>HTML/CSS</li>
             </ul>
-            <br>
+            </div>
+
+            <div id="softwaretools" class="pagesection">
             <h3>Software & Tools</h3>
             <ul class="skillList">
                 <li>Splunk Enterprise Security</li>
@@ -50,7 +52,7 @@
                 <li>Tanium</li>
                 <li>Linux/UNIX, Windows</li>
             </ul>
-
+            </div>
         </div>
     </body>
 </html>
