--- a/communityinvolvement.html
+++ b/communityinvolvement.html
@@ -28,7 +28,7 @@
         <div class="homeDiv">
             <h1>Community Involvement</h1>
 
-            <div class="pagesection">
+            <div class="pagesection" id="ci">
                 <center><h2>ISSA Kentuckiana</h2></center>
                 <center><a href = https://www.linkedin.com/company/issa-kentuckiana target="_blank">LinkedIn</a> | <a href = https://discord.gg/5TY46fPj6B target="_blank">Discord</a> | <a href = https://www.issa-kentuckiana.org/ target="_blank">issa-kentuckiana.org</a></center>
                 <center><h3>Membership Benefits</h3></center>
