formatting and button mods

--- a/certifications.html
+++ b/certifications.html
@@ -27,18 +27,18 @@
         </div>
         <div class="homeDiv">
             <h1> Certifications </h1>
-            <ul class="certList">
-                <li>Certified Information Systems Security Professional (CISSP)</li>
-                <li>GIAC Certified Incident Handler (GCIH)</li>
-                <li>GIAC Certified Detection Analyst (GCDA)</li>
-                <li>GIAC Security Essentials (GSEC)</li>
-                <li>IT Information Library Foundations Certification (ITIL)</li>
-                <li>Splunk Core Certified Power User</li>
-            </ul>
-            <br>
-            <div class="credly">
-                <a href="https://www.credly.com/users/emily-shader" target="_blank">Click here to view my badges on Credly!</a>
+            <div id="certification" class="pagesection">
+                <ul class="certList">
+                    <li>Certified Information Systems Security Professional (CISSP)</li>
+                    <li>GIAC Certified Incident Handler (GCIH)</li>
+                    <li>GIAC Certified Detection Analyst (GCDA)</li>
+                    <li>GIAC Security Essentials (GSEC)</li>
+                    <li>IT Information Library Foundations Certification (ITIL)</li>
+                    <li>Splunk Core Certified Power User</li>
+                </ul>
             </div>
+            <br>
+                <a href="https://www.credly.com/users/emily-shader" target="_blank" class="button">Click here to view my badges on Credly!</a>
         </div>
 
     </body>
