--- a/education.html
+++ b/education.html
@@ -18,6 +18,7 @@
             <li><a href="certifications.html">CERTIFICATIONS</a></li>
             <li><a href="education.html">EDUCATION</a></li>
             <li><a href="communityinvolvement.html">COMMUNITY INVOLVEMENT</a></li>
+            <li><a href="resources.html">RESOURCES</a></li>
         </ul>
         <div class = socialIcons>
             <a href="https://www.linkedin.com/in/emily-shader-bb1b40113/" class="fa fa-linkedin fa-lg" target="_blank"></a>
@@ -27,14 +28,18 @@
         </div>
         <div class="homeDiv">
             <h1> Education </h1>
-            <h2>University of Louisville</h2>
-            <h3>Bachelor of Science Business Administration</h3>
-            May 2014 - May 2019<br>
-            Computer Information Systems - Information Security and Web Development Tracks<br>
-
-            <h2>Cornell University</h2>
-            <h3>Python Programming Certificate</h3>
-            December 2024 - May 2025<br>
+            <div id="uofl" class="pagesection">
+                <h2>University of Louisville</h2>
+                <h3>Bachelor of Science Business Administration</h3>
+                May 2014 - May 2019<br>
+                Computer Information Systems - Information Security and Web Development Tracks<br>
+            </div>
+            <br>
+            <div id="cornell" class="pagesection">
+                <h2>Cornell University</h2>
+                <h3>Python Programming Certificate</h3>
+                December 2024 - May 2025<br>
+            </div>
         </div>
     </body>
 </html>
