--- a/certifications.html
+++ b/certifications.html
@@ -37,9 +37,10 @@
                     <li>IT Information Library Foundations Certification (ITIL)</li>
                     <li>Splunk Core Certified Power User</li>
                 </ul>
+                <center><a href="https://www.credly.com/users/emily-shader" target="_blank" class="button">See My Credly Badges</a></center>
             </div>
             <br>
-                <a href="https://www.credly.com/users/emily-shader" target="_blank" class="button">Click here to view my badges on Credly!</a>
+                
         </div>
 
     </body>
