--- a/communityinvolvement.html
+++ b/communityinvolvement.html
@@ -41,8 +41,8 @@
                 </ul>
                 
                 <center>
-                <a href = https://www.members.issa.org/general/custom.asp?page=join-now class="button" target="_blank">Become A Member</a><br>
-                <a href = https://www.eventbrite.com/o/issa-kentuckiana-17965555697 class="button" target="_blank">Upcoming Events</a><br>
+                <a href = https://www.members.issa.org/general/custom.asp?page=join-now class="button"  id="member" target="_blank">Become A Member</a>
+                <a href = https://www.eventbrite.com/o/issa-kentuckiana-17965555697 class="button" id="events" target="_blank">Upcoming Events</a>
                 </center>
             </div>
         </div>
