--- a/resources.html
+++ b/resources.html
@@ -27,7 +27,9 @@
         </div>
         </div>
         <div class="homeDiv">
-            
+        <h1>Resources</h1>
+        <br>
+        <h2>Coming Soon!</h2>
         </div>
     </body>
 </html>
