--- a/certifications.html
+++ b/certifications.html
@@ -2,12 +2,13 @@
 <html lang="en">
     <head>
         <!-- Google tag (gtag.js) -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-1D3LY6C2TL"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-JEH4MQ03SE"></script>
         <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag(){dataLayer.push(arguments);}
-            gtag('js', new Date());
-            gtag('config', 'G-1D3LY6C2TL');
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-JEH4MQ03SE');
         </script>
         <title>AnomalousEm</title>
         <link rel="stylesheet" href="style.css">
