--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
   <meta charset="UTF-8" />
   <title>AnomalousEm | Security Engineering</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -439,3 +440,4 @@
   </script>
 </body>
 </html>
+
