--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-JEH4MQ03SE"></script>
+  <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JEH4MQ03SE');
+  </script>
+
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   <meta charset="UTF-8" />
   <title>AnomalousEm | Security Engineering</title>
@@ -440,5 +450,6 @@
   </script>
 </body>
 </html>
+
 
 
