--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <a href="https://github.com/AnomalousEm" target="_blank" rel="noopener" class="social-icon hover:text-green-300" aria-label="GitHub">
             <i data-lucide="github"></i>
           </a>
-          <a href="hhttps://medium.com/@anomalousem" target="_blank" rel="noopener" class="social-icon hover:text-green-300" aria-label="Medium">
+          <a href="https://medium.com/@anomalousem" target="_blank" rel="noopener" class="social-icon hover:text-green-300" aria-label="Medium">
             <i data-lucide="book-open-text"></i>
           </a>
           <a href="https://x.com/AnomalousEm" target="_blank" rel="noopener" class="social-icon hover:text-green-300" aria-label="X">
@@ -449,6 +449,7 @@
   </script>
 </body>
 </html>
+
 
 
 
