--- a/index.html
+++ b/index.html
@@ -261,8 +261,10 @@
             emily@anomalousem:~$ ls resources/
           </div>
           <div class="terminal-body space-y-6 text-lg">COMING SOON</div>
-          <!-- UNDER CONSTRUCTION
           <div class="terminal-body space-y-6 text-lg">
+              <iframe src="https://drive.google.com/embeddedfolderview?id=1ACiIQXoCF44oB-e6IdtTQdGSnR8wb6O1#grid" style="width:100%; height:600px; border:0;"></iframe>
+
+            <!-- UNDER CONSTRUCTION
             <div>
               <p class="text-green-300">./security_engineering_checklist</p>
               <p class="text-gray-200">
@@ -272,7 +274,9 @@
                 <a href="LINK_TO_RESOURCE_1" class="text-green-300 hover:text-green-400">download</a>
                 <a href="#support" class="text-gray-400 hover:text-green-300 text-sm">donate &gt;</a>
               </div>
+            -->
             </div>
+          <!--
             <div>
               <p class="text-green-300">./siem_use_case_template</p>
               <p class="text-gray-200">
