Added google drive list embed

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
           </div>
           <div class="terminal-body space-y-6 text-lg">COMING SOON</div>
           <div class="terminal-body space-y-6 text-lg">
-              <iframe src="https://drive.google.com/embeddedfolderview?id=1ACiIQXoCF44oB-e6IdtTQdGSnR8wb6O1#grid" style="width:100%; height:600px; border:0;"></iframe>
+              <iframe src="https://drive.google.com/embeddedfolderview?id=1ACiIQXoCF44oB-e6IdtTQdGSnR8wb6O1#list" style="width:100%; height:600px; border:0; background-color:whitesmoke"></iframe>
 
             <!-- UNDER CONSTRUCTION
             <div>
